--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,9 @@
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
         <meta charset="UTF-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
+        <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">-->
+        <!--<meta name="format-detection" content="telephone=no">-->
+        <!--<meta name="msapplication-tap-highlight" content="no">-->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -44,16 +44,16 @@
             <div class="alert alert-info nopadding" role="alert">so cold!!</div> -->
             <div id="main-dropdown" class="row col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
                 <div class="dropdown text-center">
-                    <button id="list-button" class="btn btn-default dropdown-toggle btn-lg btn-block" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"">
+                    <button id="list-button" class="btn btn-default dropdown-toggle btn-lg btn-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"">
                         <p class="persian-text nopadding">خونه</p>
                         <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li id="list-item-#1" class="list-item"><a href="#"><p class="persian-text nopadding text-center">ژاله</p></a></li>
-                        <li id="list-item-#2" class="list-item"><a href="#"><p class="persian-text nopadding text-center">حمیدرضا</p></a></li>
-                        <li id="list-item-#3" class="list-item"><a href="#"><p class="persian-text nopadding text-center">امیرحسین</p></a></li>
+                    <ul class="dropdown-menu" aria-labelledby="list-button">
+                        <li id="list-item-#1"><a href="#"> <p class="persian-text nopadding text-center list-item">ژاله</p> </a> </li>
+                        <li id="list-item-#2"><a href="#"> <p class="persian-text nopadding text-center list-item">حمیدرضا</p> </a> </li>
+                        <li id="list-item-#3"><a href="#"> <p class="persian-text nopadding text-center list-item">امیرحسین</p> </a> </li>
                         <li role="separator" class="divider"></li>
-                        <li id="list-item-#100" class="list-item"><a href="#"><p class="text-center nopadding">root</p></a></li>
+                        <li id="list-item-#100"><a href="#"> <p class="text-center nopadding list-item">root</p> </a> </li>
                     </ul>
                 </div>
             </div>            
@@ -61,13 +61,13 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div id="go-home-icon" class="row col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 text-center">
-                <button type="button" class="btn btn-default btn-lg">
+                <button id="go-home-btn" type="button" class="btn btn-default btn-lg">
                     <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
-        <script type="text/javascript" src="js/index.js"></script>
         <script src="js/jquery-3.2.1.js"></script>
         <script src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
