all JavaScript codes have been trasfered into JQuery format

--- a/www/index.html
+++ b/www/index.html
@@ -40,20 +40,22 @@
     </head>
     <body>
         <div class="container container-table full-height">
-            <!-- <div class="alert alert-success nopadding" role="alert">so cold!!</div>
-            <div class="alert alert-info nopadding" role="alert">so cold!!</div> -->
+             <div id="alert-1" class="alert alert-success" role="alert">
+                 <p class="persian-text nopadding text-center"> به خانه‌ی خود خوش آمدید!</p>
+             </div>
+            <!--<div class="alert alert-info nopadding" role="alert">so cold!!</div> &ndash;&gt;-->
             <div id="main-dropdown" class="row col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
                 <div class="dropdown text-center">
-                    <button id="list-button" class="btn btn-default dropdown-toggle btn-lg btn-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"">
+                    <button id="list-button" class="btn btn-default dropdown-toggle btn-lg btn-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <p class="persian-text nopadding">خونه</p>
-                        <span class="caret"></span>
+                        <!--<span class="caret"></span>-->
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="list-button">
-                        <li id="list-item-#1"><a href="#"> <p class="persian-text nopadding text-center list-item">ژاله</p> </a> </li>
-                        <li id="list-item-#2"><a href="#"> <p class="persian-text nopadding text-center list-item">حمیدرضا</p> </a> </li>
-                        <li id="list-item-#3"><a href="#"> <p class="persian-text nopadding text-center list-item">امیرحسین</p> </a> </li>
+                    <ul id="members-list" class="dropdown-menu" aria-labelledby="list-button">
+                        <!--<li id="list-item-#1"><a href="#"> <p class="persian-text nopadding text-center list-item">ژاله</p> </a> </li>-->
+                        <!--<li id="list-item-#2"><a href="#"> <p class="persian-text nopadding text-center list-item">حمیدرضا</p> </a> </li>-->
+                        <!--<li id="list-item-#3"><a href="#"> <p class="persian-text nopadding text-center list-item">امیرحسین</p> </a> </li>-->
                         <li role="separator" class="divider"></li>
-                        <li id="list-item-#100"><a href="#"> <p class="text-center nopadding list-item">root</p> </a> </li>
+                        <!--<li id="list-item-#100"><a href="#"> <p class="text-center nopadding list-item">root</p> </a> </li>-->
                     </ul>
                 </div>
             </div>            
